More updates to get a working build
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/chef_master/source/_templates/nav-docs.html
+++ b/chef_master/source/_templates/nav-docs.html
@@ -519,7 +519,7 @@
               {
                 "title": "Installing Chef on Windows",
                 "hasSubItems": false,
-                "url": "/dk_windows.html"
+                "url": "/install_workstation.html"
               },
               {
                 "title": "Microsoft Azure",
@@ -560,7 +560,7 @@
               {
                 "title": "Chef Workstation on Windows",
                 "hasSubItems": false,
-                "url": "/dk_windows.html"
+                "url": "/install_workstation.html"
               },
               {
                 "title": "Chef Infra Client on Windows",
